src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>FinServ__FinancialInterests__c</fullName>
        <label>Financial Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Municipal Bonds</fullName>
                </value>
                <value>
                    <fullName>Fixed Income</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>College Planning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__IndividualId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique ID that relates this individual's account record to its contact record.</description>
        <label>Individual ID</label>
        <length>37</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FinServ__IndividualType__c</fullName>
        <description>Individual Type</description>
        <label>Individual Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__InvestmentExperience__c</fullName>
        <description>Client's investment experience.</description>
        <label>Investment Experience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Experienced</fullName>
                </value>
                <value>
                    <fullName>Moderately Experienced</fullName>
                </value>
                <value>
                    <fullName>Moderately Inexperienced</fullName>
                </value>
                <value>
                    <fullName>Inexperienced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__InvestmentObjectives__c</fullName>
        <description>Client's preference for growth versus income investments.</description>
        <label>Investment Objectives</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conservative Income</fullName>
                </value>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Balanced</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Aggressive Growth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__KYCDate__c</fullName>
        <description>Date when the KYC compliance program was completed for a person</description>
        <label>KYC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__KYCStatus__c</fullName>
        <label>KYC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                </value>
                <value>
                    <fullName>In Queue</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed - Valid</fullName>
                </value>
                <value>
                    <fullName>Completed - Invalid</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__LastInteraction__c</fullName>
        <description>Date of the last client meeting or call.</description>
        <label>Last Interaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__LastReview__c</fullName>
        <description>Date of the last client review.</description>
        <label>Last Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__LastTransactionDateJointOwner__c</fullName>
        <description>Joint owner's last transaction date.</description>
        <label>Last Transaction Date - Joint Owner</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__LastTransactionDatePrimaryOwner__c</fullName>
        <description>Primary owner's last transaction date.</description>
        <label>Last Transaction Date - Primary Owner</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__LastTransactionDate__c</fullName>
        <description>Last transaction date.</description>
        <formula>DATEVALUE(IF(
                AND(
                    ISBLANK(FinServ__LastTransactionDateJointOwner__c),
                    ISBLANK(FinServ__LastTransactionDatePrimaryOwner__c)
                ),
                NULL,
                IF(
                    BLANKVALUE(FinServ__LastTransactionDatePrimaryOwner__c, DATETIMEVALUE("1900-01-01 00:00:00")) &gt; BLANKVALUE(FinServ__LastTransactionDateJointOwner__c, DATETIMEVALUE("1900-01-01 00:00:00")),
                    FinServ__LastTransactionDatePrimaryOwner__c,
                    FinServ__LastTransactionDateJointOwner__c
                )
            ))</formula>
        <label>Last Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__LastUsedChannel__c</fullName>
        <label>Last Used Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__LengthOfRelationship__c</fullName>
        <formula>if(And(Month(Today())&gt;= month(FinServ__RelationshipStartDate__c), Day(Today()) &gt;=  Day(FinServ__RelationshipStartDate__c)),
Year(Today())- Year(FinServ__RelationshipStartDate__c) +
(Month(Today())-Month(FinServ__RelationshipStartDate__c))/12,
if(And(month(Today())&lt; month(FinServ__RelationshipStartDate__c), Day(Today())&gt;= Day(FinServ__RelationshipStartDate__c)),
Year(Today())-Year(FinServ__RelationshipStartDate__c)-1 +
(12 - Month(FinServ__RelationshipStartDate__c)+month(Today()))/12,
if(And( month(Today())&lt; month(FinServ__RelationshipStartDate__c), Day(Today())&lt; Day(FinServ__RelationshipStartDate__c)),
(Year(Today())-Year(FinServ__RelationshipStartDate__c)-1) + 
((12 - Month(FinServ__RelationshipStartDate__c)+month(Today())-1))/12,
if(And( month(Today())= month(FinServ__RelationshipStartDate__c), Day(Today())&lt; Day(FinServ__RelationshipStartDate__c)),
(Year(Today())- Year(FinServ__RelationshipStartDate__c)-1) + (11/12),
(Year(Today())- Year(FinServ__RelationshipStartDate__c)) + 
(Month(Today())-Month(FinServ__RelationshipStartDate__c)-1)/12))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Length</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__LifetimeValue__c</fullName>
        <label>Lifetime Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__MarketingSegment__c</fullName>
        <description>Market segments that characterize the client.</description>
        <label>Marketing Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mass Affluent</fullName>
                </value>
                <value>
                    <fullName>High Net Worth</fullName>
                </value>
                <value>
                    <fullName>Female Investor</fullName>
                </value>
                <value>
                    <fullName>Millennial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__NetWorth__c</fullName>
        <label>Net Worth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__NextInteraction__c</fullName>
        <label>Next Interaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__NextReview__c</fullName>
        <label>Next Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__Notes__c</fullName>
        <label>Important Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__PersonalInterests__c</fullName>
        <label>Personal Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cooking</fullName>
                </value>
                <value>
                    <fullName>College Basketball</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Hiking</fullName>
                </value>
                <value>
                    <fullName>Biking</fullName>
                </value>
                <value>
                    <fullName>Wine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Primary Contact)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>My Referrals</relationshipLabel>
        <relationshipName>AccountContactReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Referrer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountEmployeeReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__RelationshipStartDate__c</fullName>
        <label>Relationship Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__ReviewFrequency__c</fullName>
        <label>Review Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__RiskTolerance__c</fullName>
        <label>Risk Tolerance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aggressive</fullName>
                </value>
                <value>
                    <fullName>Conservative</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ServiceModel__c</fullName>
        <description>Service level assigned to client.</description>
        <label>Service Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FinServ__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Deliquent</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__TimeHorizon__c</fullName>
        <label>Time Horizon</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Long Term</fullName>
                </value>
                <value>
                    <fullName>Medium Term</fullName>
                </value>
                <value>
                    <fullName>Short Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__TotalAUMJointOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total AUM Joint Owner</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalAUMPrimaryOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total AUM Primary Owner</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalBankDepositsJointOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all banking deposit accounts for which the client is the joint owner.</description>
        <label>Total Bank Deposits Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalBankDepositsPrimaryOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all banking deposit accounts for which the client is the primary owner.</description>
        <label>Total Bank Deposits Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalBankDeposits__c</fullName>
        <description>Value of all banking deposit accounts.</description>
        <formula>FinServ__TotalBankDepositsJointOwner__c + FinServ__TotalBankDepositsPrimaryOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Bank Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalFinAcctsJointOwner__c</fullName>
        <description>Calculated total of jointly owned financial account balances for which the client is the joint owner.</description>
        <label>Total Financial Accounts Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalFinAcctsPrimaryOwner__c</fullName>
        <description>Calculated total of financial account balances where the client is the primary owner of either individually owned and jointly owned accounts.</description>
        <label>Total Financial Accounts Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalFinancialAccounts__c</fullName>
        <description>Sum of Total Bank Deposits and Total Investments.</description>
        <formula>FinServ__TotalFinAcctsPrimaryOwner__c  + FinServ__TotalFinAcctsJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Financial Accounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalHeldFinAcctsJointOwner__c</fullName>
        <description>Calculated total of held, jointly owned financial account balances for which the client is the joint owner.</description>
        <label>Total Held Financial Accounts Joint</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalHeldFinAcctsPrimaryOwner__c</fullName>
        <description>Calculated total of held financial account balances where the client is the primary owner of either individually owned or jointly owned accounts.</description>
        <label>Total Held Financial Accounts Primary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalInsuranceJointOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all insurance policies for which the client is the joint owner.</description>
        <label>Total Insurance Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalInsurancePrimaryOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all insurance policies for which the client is the primary owner.</description>
        <label>Total Insurance Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalInsurance__c</fullName>
        <description>Value of all insurance policies.</description>
        <formula>FinServ__TotalInsurancePrimaryOwner__c + FinServ__TotalInsuranceJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalInvestmentsJointOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all investment accounts for which the client is the joint owner.</description>
        <label>Total Investments Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalInvestmentsPrimaryOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all investment accounts for which the client is the primary owner.</description>
        <label>Total Investments Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalInvestments__c</fullName>
        <description>Value of all investment accounts.</description>
        <formula>FinServ__TotalInvestmentsPrimaryOwner__c + FinServ__TotalInvestmentsJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Investments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalLiabilitiesJointOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Liabilities Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalLiabilitiesPrimaryOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Liabilities Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalLiabilities__c</fullName>
        <description>Value of all liabilities accounts.</description>
        <formula>FinServ__TotalLiabilitiesPrimaryOwner__c + FinServ__TotalLiabilitiesJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Liabilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNonfinancialAssetsJointOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all physical assets such as collectibles or precious metals for which the client is the joint owner.</description>
        <label>Total Nonfinancial Assets Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNonfinancialAssetsPrimaryOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all physical assets such as collectibles or precious metals for which the client is the primary owner.</description>
        <label>Total Nonfinancial Assets Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNonfinancialAssets__c</fullName>
        <description>Value of all physical assets such as collectibles or precious metals.</description>
        <formula>FinServ__TotalNonfinancialAssetsPrimaryOwner__c + FinServ__TotalNonfinancialAssetsJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Nonfinancial Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNumberOfFinAccountsJointOwner__c</fullName>
        <description>Total numbers of client's financial accounts as a joint owner.</description>
        <label>Number of Fin. Accounts - Joint Owner</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNumberOfFinAccountsPrimaryOwner__c</fullName>
        <description>Total numbers of client's financial accounts as a primary owner.</description>
        <label>Number of Fin. Accounts - Primary Owner</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNumberOfFinAccounts__c</fullName>
        <description>Total number of the client's financial accounts that are managed by our firm.</description>
        <formula>FinServ__TotalNumberOfFinAccountsPrimaryOwner__c + FinServ__TotalNumberOfFinAccountsJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number of Financial Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalOutstandingCreditJointOwner__c</fullName>
        <label>Total Outstanding Credit - Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalOutstandingCreditPrimaryOwner__c</fullName>
        <label>Total Outstanding Credit - Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalOutstandingCredit__c</fullName>
        <description>Value of client's total outstanding credit from the financial accounts that are managed by our firm.</description>
        <formula>FinServ__TotalOutstandingCreditPrimaryOwner__c + FinServ__TotalOutstandingCreditJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Outstanding Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalPremium__c</fullName>
        <description>Total Premium field for Insurance</description>
        <label>Total Premium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalRevenue__c</fullName>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__WalletShare__c</fullName>
        <formula>ROUND(((FinServ__TotalHeldFinAcctsPrimaryOwner__c + FinServ__TotalHeldFinAcctsJointOwner__c) / IF( (FinServ__TotalFinAcctsPrimaryOwner__c+FinServ__TotalFinAcctsJointOwner__c)=0,1,(FinServ__TotalFinAcctsPrimaryOwner__c+FinServ__TotalFinAcctsJointOwner__c))), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wallet Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>Affiliates</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Affiliate</value>
        </filters>
        <label>Affiliates</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Key__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Affiliate,Account.Customer,PersonAccount.Financial_Professional,Account.Prospect</value>
        </filters>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Branches</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Branch</value>
        </filters>
        <label>Branches</label>
    </listViews>
    <listViews>
        <fullName>Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Division_Code__c</columns>
        <columns>Key__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer</value>
        </filters>
        <label>Customers</label>
    </listViews>
    <listViews>
        <fullName>Financial_Professionals</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Financial_Professional</value>
        </filters>
        <label>Financial Professionals</label>
    </listViews>
    <listViews>
        <fullName>Masters</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Master</value>
        </filters>
        <label>Masters</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FinServ__CustomerID__c</columns>
        <columns>Distribution_Channel__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Team</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Prospects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Prospect</value>
        </filters>
        <label>Prospects</label>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Businesses</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesBusiness</value>
        </filters>
        <label>My Businesses</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Clients</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>FinServ__TotalFinancialAccounts__c</columns>
        <columns>FinServ__AUM__c</columns>
        <columns>FinServ__WalletShare__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesIndividual</value>
        </filters>
        <filters>
            <field>FinServ__IndividualType__c</field>
            <operation>equals</operation>
            <value>Individual</value>
        </filters>
        <label>My Clients</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Groups</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>FinServ__TotalFinancialAccounts__c</columns>
        <columns>FinServ__AUM__c</columns>
        <columns>FinServ__WalletShare__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesHousehold</value>
        </filters>
        <filters>
            <field>FinServ__IndividualType__c</field>
            <operation>equals</operation>
            <value>Group</value>
        </filters>
        <label>My Groups</label>
        <language>en_US</language>
    </listViews>
</CustomObject>